updated contact grad programs
updated contact grad programs

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -16,7 +16,7 @@
 					<key>page0 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T14:37:04Z</date>
+						<date>2019-08-27T17:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -365,11 +365,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FuJh5Zl7mpuw
-								kVGy1G9YUQ==
+								AkuY4CWq1/YJ
+								B5rVscvUUw==
 								</data>
 								<key>Size</key>
-								<integer>154448</integer>
+								<integer>154364</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4864,7 +4864,7 @@
 					<key>page43 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T14:37:04Z</date>
+						<date>2019-08-27T17:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4943,11 +4943,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qtj4HIzU91p/
-								D2P32ygSeA==
+								Qi/zm9uIZlol
+								mYUKOCTMaA==
 								</data>
 								<key>Size</key>
-								<integer>38922</integer>
+								<integer>38921</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5678,7 +5678,7 @@
 					<key>page47 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T14:37:04Z</date>
+						<date>2019-08-27T17:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5897,11 +5897,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5FN8wvAPkvdK
-								YVs5UCoO1Q==
+								SDwV7oF+s2AL
+								GbStQIhlGg==
 								</data>
 								<key>Size</key>
-								<integer>1246</integer>
+								<integer>1250</integer>
 							</dict>
 							<key>files/stacks_in_p525893_n7_page47_phpmailer2.php</key>
 							<dict>
@@ -5937,11 +5937,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kwZjP1zfnb06
-								bxPShHBxAQ==
+								SyALSjSvRX7o
+								qlImVuB+Sw==
 								</data>
 								<key>Size</key>
-								<integer>99084</integer>
+								<integer>99035</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6946,7 +6946,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T15:44:27Z</date>
+						<date>2019-08-27T18:02:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7095,11 +7095,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VxdgXdehfMvg
-								e/AYyzye3g==
+								8eKTFiE6e/dA
+								kg+Wve+RfQ==
 								</data>
 								<key>Size</key>
-								<integer>88664</integer>
+								<integer>88675</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10836,7 +10836,7 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T15:44:27Z</date>
+						<date>2019-08-27T18:02:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10925,11 +10925,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Zr+6r+u87526
-								vUEHoN/b2g==
+								2xDZ8+4nFnuu
+								Mp/0WDr0QA==
 								</data>
 								<key>Size</key>
-								<integer>55153</integer>
+								<integer>55164</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12266,7 +12266,7 @@
 					<key>page7 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T14:37:04Z</date>
+						<date>2019-08-27T17:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12545,11 +12545,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								j+OAFAd86kuy
-								blrGVQwjew==
+								Rktb69IiKOdn
+								EkNTjarV2w==
 								</data>
 								<key>Size</key>
-								<integer>128253</integer>
+								<integer>128164</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12562,7 +12562,7 @@
 					<key>page70 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T15:44:27Z</date>
+						<date>2019-08-27T18:02:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12841,11 +12841,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								c41N3mfWJNoX
-								KlbJ/6/Gag==
+								g50PkUo8fXSO
+								p0s5nynIbA==
 								</data>
 								<key>Size</key>
-								<integer>95328</integer>
+								<integer>95339</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15502,7 +15502,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T19:28:09Z</date>
+						<date>2019-08-27T18:02:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15531,11 +15531,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/0lDSeNss+dI
-								q5UyZQPRyw==
+								addQXmb2+WAB
+								ZWs7OtEtdA==
 								</data>
 								<key>Size</key>
-								<integer>5952</integer>
+								<integer>6080</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15614,7 +15614,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T15:44:27Z</date>
+						<date>2019-08-27T18:02:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16693,11 +16693,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								u5G5AGCZXbCc
-								Y3PynUctsA==
+								ZKUOR1YOgUKe
+								Im4T1fMiLQ==
 								</data>
 								<key>Size</key>
-								<integer>3904</integer>
+								<integer>4681</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -16851,7 +16851,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGKw66+7pWADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGK09ivpjeADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16861,14 +16861,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYrDrr7v
-				E4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYrT2K+m
+				vYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBisOuvu81
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBitPYr6bf
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16878,7 +16878,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBisOuvu9OgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBitPYr6b4gAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16888,7 +16888,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBisOuvu9ngAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBitPYr6cRgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
