--- a/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T14:37:04Z</date>
+						<date>2019-08-27T17:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -252,11 +252,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5FN8wvAPkvdK
-								YVs5UCoO1Q==
+								SDwV7oF+s2AL
+								GbStQIhlGg==
 								</data>
 								<key>Size</key>
-								<integer>1246</integer>
+								<integer>1250</integer>
 							</dict>
 							<key>files/stacks_in_p525893_n7_page47_phpmailer2.php</key>
 							<dict>
@@ -292,11 +292,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kwZjP1zfnb06
-								bxPShHBxAQ==
+								SyALSjSvRX7o
+								qlImVuB+Sw==
 								</data>
 								<key>Size</key>
-								<integer>99084</integer>
+								<integer>99035</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
