--- a/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T14:37:04Z</date>
+						<date>2019-08-27T17:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -382,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FuJh5Zl7mpuw
-								kVGy1G9YUQ==
+								AkuY4CWq1/YJ
+								B5rVscvUUw==
 								</data>
 								<key>Size</key>
-								<integer>154448</integer>
+								<integer>154364</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
