--- a/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T14:37:04Z</date>
+						<date>2019-08-27T17:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -312,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								j+OAFAd86kuy
-								blrGVQwjew==
+								Rktb69IiKOdn
+								EkNTjarV2w==
 								</data>
 								<key>Size</key>
-								<integer>128253</integer>
+								<integer>128164</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
