--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T15:44:27Z</date>
+						<date>2019-08-27T18:02:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -312,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								c41N3mfWJNoX
-								KlbJ/6/Gag==
+								g50PkUo8fXSO
+								p0s5nynIbA==
 								</data>
 								<key>Size</key>
-								<integer>95328</integer>
+								<integer>95339</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
