--- a/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T15:44:27Z</date>
+						<date>2019-08-27T18:02:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Zr+6r+u87526
-								vUEHoN/b2g==
+								2xDZ8+4nFnuu
+								Mp/0WDr0QA==
 								</data>
 								<key>Size</key>
-								<integer>55153</integer>
+								<integer>55164</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
