--- a/vermontcomplexsystems-foundation.rw8/Pages/12-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/5-Contact/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/12-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/5-Contact/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T14:37:04Z</date>
+						<date>2019-08-27T17:52:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qtj4HIzU91p/
-								D2P32ygSeA==
+								Qi/zm9uIZlol
+								mYUKOCTMaA==
 								</data>
 								<key>Size</key>
-								<integer>38922</integer>
+								<integer>38921</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
