--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -6946,7 +6946,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T18:02:23Z</date>
+						<date>2019-08-28T12:58:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7095,11 +7095,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8eKTFiE6e/dA
-								kg+Wve+RfQ==
+								ciFOQnKsM7Yo
+								dr9GLselZA==
 								</data>
 								<key>Size</key>
-								<integer>88675</integer>
+								<integer>88718</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10836,7 +10836,7 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T18:02:23Z</date>
+						<date>2019-08-28T12:58:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10925,11 +10925,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2xDZ8+4nFnuu
-								Mp/0WDr0QA==
+								IatFEHLCVIq7
+								LqqRDeBb5Q==
 								</data>
 								<key>Size</key>
-								<integer>55164</integer>
+								<integer>55207</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12562,7 +12562,7 @@
 					<key>page70 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T18:02:23Z</date>
+						<date>2019-08-28T12:58:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12841,11 +12841,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								g50PkUo8fXSO
-								p0s5nynIbA==
+								rKchfvlJ7QsG
+								nt1SEXBNdA==
 								</data>
 								<key>Size</key>
-								<integer>95339</integer>
+								<integer>95382</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15502,7 +15502,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T18:02:23Z</date>
+						<date>2019-08-28T12:58:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15531,11 +15531,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								addQXmb2+WAB
-								ZWs7OtEtdA==
+								/0lDSeNss+dI
+								q5UyZQPRyw==
 								</data>
 								<key>Size</key>
-								<integer>6080</integer>
+								<integer>5952</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15614,7 +15614,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T18:02:23Z</date>
+						<date>2019-08-28T12:58:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16693,11 +16693,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZKUOR1YOgUKe
-								Im4T1fMiLQ==
+								1yLJv6HrN+K1
+								E56KGMEWMw==
 								</data>
 								<key>Size</key>
-								<integer>4681</integer>
+								<integer>3904</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -16851,7 +16851,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGK09ivpjeADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGLWQd/sBSADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16861,14 +16861,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYrT2K+m
-				vYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYtZB3+w
+				q4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBitPYr6bf
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBi1kHf7De
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16878,7 +16878,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBitPYr6b4gAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBi1kHf7D/gAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16888,7 +16888,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBitPYr6cRgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBi1kHf7EhgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
