--- a/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T18:02:23Z</date>
+						<date>2019-08-28T12:58:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -182,11 +182,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8eKTFiE6e/dA
-								kg+Wve+RfQ==
+								ciFOQnKsM7Yo
+								dr9GLselZA==
 								</data>
 								<key>Size</key>
-								<integer>88675</integer>
+								<integer>88718</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
