--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-27T18:02:23Z</date>
+						<date>2019-08-28T12:58:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -312,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								g50PkUo8fXSO
-								p0s5nynIbA==
+								rKchfvlJ7QsG
+								nt1SEXBNdA==
 								</data>
 								<key>Size</key>
-								<integer>95339</integer>
+								<integer>95382</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
