--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-28T12:58:51Z</date>
+						<date>2019-08-30T15:55:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -117,6 +117,26 @@
 								</data>
 								<key>Size</key>
 								<integer>41684</integer>
+							</dict>
+							<key>files/stacks-image-255a2f1-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hZ7GeleAdz/N
+								XlI9wufLRg==
+								</data>
+								<key>Size</key>
+								<integer>39464</integer>
+							</dict>
+							<key>files/stacks-image-255a2f1-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								/NbezhjhzYOs
+								d1BX14O8fw==
+								</data>
+								<key>Size</key>
+								<integer>62312</integer>
 							</dict>
 							<key>files/stacks-image-2706f3f.png</key>
 							<dict>
@@ -258,6 +278,56 @@
 								<key>Size</key>
 								<integer>46387</integer>
 							</dict>
+							<key>files/stacks-image-b4a7cc2-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								aRl4Ia3LHN7H
+								5RYHmR/W6w==
+								</data>
+								<key>Size</key>
+								<integer>33361</integer>
+							</dict>
+							<key>files/stacks-image-b4a7cc2-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7Mp45BV9nm73
+								yOJaQ3b/mg==
+								</data>
+								<key>Size</key>
+								<integer>57951</integer>
+							</dict>
+							<key>files/stacks-image-bbaa6d8-400x400.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								BUQ9F6oNajMu
+								FTFE4TvQAg==
+								</data>
+								<key>Size</key>
+								<integer>283376</integer>
+							</dict>
+							<key>files/stacks-image-bbaa6d8-400x400@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								i1CNJ3gA43Iv
+								Y3E5+bp4/Q==
+								</data>
+								<key>Size</key>
+								<integer>1112314</integer>
+							</dict>
+							<key>files/stacks-image-c55cf75-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								4suqGNDzUilr
+								f12FWRUY/w==
+								</data>
+								<key>Size</key>
+								<integer>40780</integer>
+							</dict>
 							<key>files/stacks-image-ddd9365-698x116.png</key>
 							<dict>
 								<key>Digest</key>
@@ -292,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7JBr6WlcOR9Y
-								DYyHr7to7w==
+								zxFuI3ZhXg01
+								Z/gG1jilRA==
 								</data>
 								<key>Size</key>
-								<integer>194404</integer>
+								<integer>198524</integer>
 							</dict>
 							<key>files/stacks_page_page70.js</key>
 							<dict>
@@ -312,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rKchfvlJ7QsG
-								nt1SEXBNdA==
+								D7MqX/qmOgx1
+								7rqCuKNDjw==
 								</data>
 								<key>Size</key>
-								<integer>95382</integer>
+								<integer>98384</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
