--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -7,6 +7,8 @@
 		<string>page2</string>
 		<string>page3</string>
 		<string>page16</string>
+		<string>page64</string>
+		<string>page76</string>
 		<string>page69</string>
 		<string>page10</string>
 		<string>page5</string>
@@ -17,9 +19,11 @@
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
+	<key>selectedInspectorTab</key>
+	<string>info</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page70</string>
+		<string>page81</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
