--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/3-ALife-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/3-ALife-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T16:53:35Z</date>
+						<date>2019-09-04T17:10:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -54,11 +54,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZFHf9zniv4SK
-								z9ywIWAR7Q==
+								kDQdTd/TojTe
+								5RskwegNJw==
 								</data>
 								<key>Size</key>
-								<integer>124861</integer>
+								<integer>361514</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UX/y9dHtEZzr
-								zkHWexmiYg==
+								Ln7V769HIEIR
+								3O1XEMgTKw==
 								</data>
 								<key>Size</key>
-								<integer>120168</integer>
+								<integer>128163</integer>
 							</dict>
 							<key>files/stacks_page_page72.js</key>
 							<dict>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WmjRjcjM6t9e
-								A2NX7jAOlg==
+								ZXi0hWS0WAxh
+								B85w9KU6Zw==
 								</data>
 								<key>Size</key>
-								<integer>51718</integer>
+								<integer>58562</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
