--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -7,6 +7,7 @@
 		<string>page2</string>
 		<string>page3</string>
 		<string>page16</string>
+		<string>page53</string>
 		<string>page64</string>
 		<string>page76</string>
 		<string>page69</string>
@@ -14,16 +15,16 @@
 		<string>page5</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
 	<key>selectedInspectorTab</key>
-	<string>info</string>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page81</string>
+		<string>page72</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
