Alife style button
Alife style button

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/1-Papers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/1-Papers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-09-04T16:24:14Z</date>
+						<date>2019-09-04T17:43:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								20H0aK+AuFQv
-								H1pr6gCtlg==
+								qkDrS4t4afYe
+								1jP3gx10oA==
 								</data>
 								<key>Size</key>
-								<integer>117602</integer>
+								<integer>117599</integer>
 							</dict>
 							<key>files/stacks_page_page81.js</key>
 							<dict>
